cabal-version:      2.4
name:               PresOnBlock
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Janaka Ranasinghe
maintainer:         janaka.ranasinghe@quantalect.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PresOnBlock
                    , PresOnBlockTests
                    , Deploy

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson
                    , base ^>=4.14.3.0
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-constraints
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , plutus-use-cases
                    , prettyprinter
                    , text
                 
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable PresOnBlock
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        PresOnBlock

    hs-source-dirs:   app
    default-language: Haskell2010
